@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class AssignVehiclesUI {
}

class AssignVehiclesController {
    +AssignVehiclesController(agenda, vehicleRepository)
    +assignVehiclesToEntry(agendaIndex, vehiclesPlateNumber)
    -getEntryByIndex(index)
    -getVehicleByPlateNumber(vehiclePlateNumber)
    +getEntriesList()
    +getVehiclesList()
}

class Agenda {
    +getEntryByIndex(index)
}

class Entry {
    -Date startingDate
    -AgendaStatus status
    -Task task
    -List<Vehicle> vehiclesAssign
    +Entry(startingDate, task)
    +assignVehicles(vehiclesAssign)
}

class VehicleRepository {
    +getVehicleByPlateNumber(plateNumber)
}

class Vehicle {
    -String plateNumber
    +getPlateNumber()
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getAgenda()
    + getVehicleRepository()
}

AssignVehiclesUI ..> AssignVehiclesController
AssignVehiclesController ..> Repositories: repositories
AssignVehiclesController ..> Agenda: agenda
AssignVehiclesController ..> VehicleRepository: vehicleRepository
Repositories --> Repositories: instance
Repositories --> "1" Agenda
Repositories --> "1" VehicleRepository
Agenda --> "*" Entry
VehicleRepository --> "*" Vehicle
Entry --> "*" Vehicle

@enduml